new build homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myprojectss",
-  "homepage" : "http://myname.github.io/myprojectss",
+  "homepage" : "http://tricko17.github.io/myprojectss",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
